--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@mermaid-js/mermaid-cli": "^11.6.0",
     "body-parser": "^2.2.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jsdom": "^22.1.0",
+    "mermaid": "^10.4.8"
   }
 }
