--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "build": "npm install && npx puppeteer browsers install chrome-headless-shell && your-build-command",
+    "postinstall": "npx puppeteer browsers install chrome-headless-shell",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
