--- a/package.json
+++ b/package.json
@@ -4,18 +4,11 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "build": "npm install && npx puppeteer browsers install chrome-headless-shell",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm install && npx puppeteer browsers install chrome-headless-shell"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "@mermaid-js/mermaid-cli": "^11.6.0",
     "body-parser": "^2.2.0",
-    "express": "^5.1.0",
-    "jsdom": "^22.1.0",
-    "mermaid": "^10.4.8"
+    "express": "^5.1.0"
   }
 }
